Fix: deterministic repository test ordering, test data isolation, and lint improvements